# sakura

./: .gitignore  CMakeLists.txt  README.md  \  ]
CORE/APU_2A03/: wrapper.cpp  wrapper.h
CORE/BUS/: bus.cpp  bus.h
CORE/CART/: cart.cpp  cart.h
CORE/CPU_6502/: addressing_modes.cpp  core.cpp  core.h  opcodes.cpp
CORE/LOGGER/: cpu_logger.cpp  logger.cpp  logger.h  ppu_logger.cpp
CORE/MAPPERS/: mapper.h  mapper0.cpp  mapper4.cpp
CORE/PPU_2C02/: core_ppu.cpp  core_ppu.h
MAIN/: main.cpp  main.h  save.cpp  save.h
UI/: Program.cs  Resources.Designer.cs  Resources.ja.resx  Resources.resx  Rom.cs  SakuraUI.cs  Settings.cs  cfg.json  cpu_log.txt  log.txt  ppu_log.txt  sakura_core
UI/frameviews/: ControlsView.cs  LogView.cs  RomListView.cs  SaveStateView.cs  SavesView.cs  SettingsView.cs  SramView.cs
UI/helpers/: ASCII.cs  Controls.cs  CoreWrapper.cs  DialogHelpers.cs  Log.cs
UI/saves/sram/: kirb.sav
UI/saves/state/: Super Mario Bros. 3 (USA) (Rev 1)_2026-05-29 02:32:16.sakura  kirb_2026-05-28 03:53:51.sakura  kirb_2026-05-28 03:53:55.sakura  kirb_2026-05-28 03:54:00.sakura  kirb_2026-05-28 03:54:02.sakura  kirb_2026-05-28 03:55:45.sakura  smb3_2026-05-28 02:08:03.sakura  smb3_2026-05-28 03:43:01.sakura  smb3_2026-05-28 03:43:04.sakura  smb3_2026-05-28 03:43:17.sakura  smb3_2026-05-28 03:43:24.sakura  smb3_2026-05-28 03:43:33.sakura  smb3_2026-05-28 03:43:42.sakura
